Api corregida
