# swagger/swagger.json
@@ -188,179 +188,6 @@
                 }
             }
         },
-        "/ControlPlaca/": {
-            "get": {
-                "tags": [
-                    "ControlPlaca"
-                ],
-                "description": "consulta todos los registros de la tabla ControlPlaca",
-                "operationId": "ControlPlacaController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filtro. Por ejemplo, col1: v1, col2: v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Campos devueltos. Por ejemplo, col1, col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Campos ordenados por. Por ejemplo, Col1, col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "El orden correspondiente a cada campo de clasificación, si es un valor único, se aplica a todos los campos de clasificación. Por ejemplo, desc, asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limite el tamaño del conjunto de resultados. Debe ser un número entero",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Posición inicial del conjunto de resultados. Debe ser un número entero",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.ControlPlaca"
-                        }
-                    },
-                    "403": {
-                        "description": ""
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "ControlPlaca"
-                ],
-                "description": "agregar un registro en la tabla ControlPlaca",
-                "operationId": "ControlPlacaController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Cuerpo para el contenido de ControlPlaca",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ControlPlaca"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.ControlPlaca"
-                    },
-                    "403": {
-                        "description": "Cuerpo Vacío"
-                    }
-                }
-            }
-        },
-        "/ControlPlaca/{id}": {
-            "get": {
-                "tags": [
-                    "ControlPlaca"
-                ],
-                "description": "consultar un registro de la tabla ControlPlaca por su id",
-                "operationId": "ControlPlacaController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "Id a consultar",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.ControlPlaca"
-                        }
-                    },
-                    "403": {
-                        "description": ":id está vacío"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "ControlPlaca"
-                ],
-                "description": "actualizar un registro de la tabla ControlPlaca",
-                "operationId": "ControlPlacaController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "Id del registro a actualizar",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "Cuerpo para el contenido de ControlPlaca",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ControlPlaca"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.ControlPlaca"
-                        }
-                    },
-                    "403": {
-                        "description": ":id no es entero"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "ControlPlaca"
-                ],
-                "description": "elimina un registro de la tabla ControlPlaca",
-                "operationId": "ControlPlacaController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "Id del registro a eliminar",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} borrado exitoso!"
-                    },
-                    "403": {
-                        "description": "Id vacío"
-                    }
-                }
-            }
-        },
         "/Diagnostico/": {
             "get": {
                 "tags": [
@@ -1414,11 +1241,9 @@
                 "Cardiopatias": {
                     "type": "string"
                 },
-                "Ceda": {
-                    "type": "string"
-                },
                 "Cepillado": {
-                    "type": "string"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "Chicle": {
                     "type": "string"
@@ -1433,7 +1258,8 @@
                     "type": "string"
                 },
                 "Enjuague": {
-                    "type": "string"
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "FiebreReumatica": {
                     "type": "string"
@@ -1464,8 +1290,12 @@
                 "Medicamentos": {
                     "type": "string"
                 },
-                "Otras": {
+                "Otros": {
                     "type": "string"
+                },
+                "Seda": {
+                    "type": "integer",
+                    "format": "int64"
                 },
                 "Sinusitis": {
                     "type": "string"
@@ -1479,50 +1309,14 @@
                 }
             }
         },
-        "models.ControlPlaca": {
-            "title": "ControlPlaca",
-            "type": "object",
-            "properties": {
-                "Fecha": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "HistoriaClinicaId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "HojaHistoriaId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "IndiceActual": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "IndiceAnterior": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Observaciones": {
-                    "type": "string"
-                },
-                "TipoOdontograma": {
-                    "$ref": "#/definitions/models.TipoOdontograma"
-                },
-                "Vestibulares": {
-                    "type": "string"
-                }
-            }
-        },
         "models.Diagnostico": {
             "title": "Diagnostico",
             "type": "object",
             "properties": {
                 "Diagnostico": {
+                    "type": "string"
+                },
+                "Evaluacion": {
                     "type": "string"
                 },
                 "Evolucion": {
@@ -1540,10 +1334,25 @@
                     "type": "integer",
                     "format": "int64"
                 },
+                "Motivo": {
+                    "type": "string"
+                },
                 "Observaciones": {
                     "type": "string"
                 },
                 "Pronostico": {
+                    "type": "string"
+                },
+                "Pulso": {
+                    "type": "string"
+                },
+                "Respiracion": {
+                    "type": "string"
+                },
+                "Temperatura": {
+                    "type": "string"
+                },
+                "TensionArterial": {
                     "type": "string"
                 }
             }
@@ -1630,9 +1439,6 @@
                 "MusculosMasticadores": {
                     "type": "string"
                 },
-                "Observaciones": {
-                    "type": "string"
-                },
                 "Paladar": {
                     "type": "string"
                 },
@@ -1642,13 +1448,10 @@
                 "SenosMaxilares": {
                     "type": "string"
                 },
-                "SistemaLinfatico": {
+                "SistemaLinfaticoRegional": {
                     "type": "string"
                 },
                 "SistemaNervioso": {
-                    "type": "string"
-                },
-                "SistemaRegional": {
                     "type": "string"
                 },
                 "SistemaVascular": {
